# stretch-rs

./: .gitignore  Cargo.toml  README.md
src/: gamma.rs  lib.rs  main.rs
src/io/: file_dialog.rs  image.rs  mod.rs  raw.rs
