[package]
name = "stretchrs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "stretchrs"

[[bin]]
name = "stretchrs"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.5", features = ["rayon"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"

[profile.release]
overflow-checks = false